test/toolstest/effect_parser/invalid/01_missing_semicolon.def
/*
 * Invalid: Missing semicolon after field declaration
 */

struct [[ge::params(type=TEST_NO_SEMI, name="TestNoSemi")]] TestNoSemiParams {
    float value1
    int value2;
};
